# xfce-lang-changer

./: Cargo.toml  Makefile  PKGBUILD  README.md  xfce-aero-lang-changer.desktop  xfce-lang-changer.desktop
.github/workflows/: build.yml  release.yml  update-country-data.yml
data/: country_names.json
scripts/: generate-country-data.py
src/: country_data.rs  lang.json  main.rs
